--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Offers</a>
                 </li>
                 <li class="nav-item active">
-                <a class="nav-link " data-toggle="modal"  data-target="#exampleModalCenter" href="javascript:void(0)">Login</a>
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item active">
+                <a class="nav-link px-5 mx-2 btn btn-warning" data-toggle="modal"  data-target="#exampleModalCenter" href="javascript:void(0)">Login</a>
                 </li>
             </ul>
             
@@ -37,6 +40,22 @@
 
     </nav>
     <!-- End Navbar -->
+
+
+    <!-- Content -->
+    <div id="content" class="m-3">
+        <div class="container d-flex">
+            <div>
+                dasdsa
+            </div>
+            <div>
+                sad
+            </div>
+        </div>
+    </div>
+
+    <!-- End Content -->
+
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -54,13 +73,17 @@
                     <input class="form-control mb-2" type="password" name="pass" id="pass" placeholder="Password">
                     <button type="submit" class="form-control mb-2 btn btn-success  " id="loginBTN">Login</button>
                 </form>
+
+                <div>
+                    <span>Don't have account?</span>
+                    <a href="#" class="text-danger">Create account</a>
+                </div>
             </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+            
         </div>
         </div>
     </div>
+    <!-- End Modal -->
 
 </body>
 </html>
